# simu-emperor

./: .env.example  .gitignore  AGENTS.md  API_TEST_GUIDE.md  ARCHITECTURE_V2.md  CLAUDE.md  CONVERSION_COMPLETE.md  CONVERSION_REPORT.md  DEBUG_REPORT.md  ENHANCED_EXECUTION_AGENT_SUMMARY.md  EVENT_SYSTEM_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PR19_REVIEW_FIXES.md  PROVINCE_AGENT_README.md  README.md  SYNTAX_ERRORS_FIXED.md  adjust_coefficients.py  agent_roadmap.md  analyze_current_values.py  config.benchmark.example.yaml  config.benchmark.test.yaml  config.benchmark.yaml  config.example.yaml  config.yaml.example  config_example.py  config_loader.py  convert_chinese_to_english.py  convert_cli_files.py  convert_core_comments.py  demo_event_cli.py  demo_three_agent_pipeline.py  docker-compose.full.yml  docker-compose.yml  final_verification.py  fix_apostrophes.py  game_balance_report.md  main.py  prometheus.yml  pyproject.toml  (+15 more)
.claude/: AGENTS.md
.doc/: grafana_setup_guide.md
.sisyphus/plans/: benchmark-implementation.md  benchmark-integration.md
.summary/: step11_web_ui.md  step12_data_demo.md
agents/: base.py  central_advisor.py  governor_agent.py  governor_extensions.py  personality.py
agents/province/: __init__.py  behaviors.py  decision_agent.py  decision_agent_llm.py  enhanced_execution_agent.py  enhanced_execution_models.py  execution_agent.py  models.py  perception_agent.py
benchmark/: README.md  __init__.py  __main__.py  base.py  config.py  context.py  metrics_hook.py  models.py  report.py  runner.py
benchmark/agent/: __init__.py  intent_accuracy.py  multi_agent.py  response_perf.py
benchmark/data/: __init__.py  intent_cases.json  memory_events.json
benchmark/memory/: __init__.py  compression.py  cross_session.py  retrieval.py
benchmark/reports/: __init__.py
core/: __init__.py  agent.py  budget_execution.py  budget_system.py  calculations.py  game.py  project.py  province.py  treasury_system.py
data/: RULE.md  event_templates.json  game.db-journal  initial_provinces.json  initial_state_v4.json  role_map.md
data/default_agents/: role_map.md
data/memory/: manifest.json
data/skills/: chat.md  create_incident.md  execute_command.md  on_tick_completed.md  (+5 more)
db/: database.py  event_database.py
events/: __init__.py  agent_event_generator.py  event_effects.py  event_generator.py  event_manager.py  event_models.py  event_templates.py  overdraft_events.py
examples/: enhanced_execution_demo.py  llm_decision_agent_standalone.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
grafana/: dashboard.json
reports/: agent-only.md  test-run.md
scripts/: README.md  clean_runtime_data.sh  memory_test_tool.py  run_demo.py  seed_game.py  start.sh  start_v5.sh  test_memory_compact_search.py
test_memory_output/: test_log.txt
tests/: README.md  __init__.py  conftest.py  pipeline_mock_data.py  test_agent_interface_pytest.py  test_db_interface_pytest.py  test_game_interface_pytest.py  test_game_state.py  test_memory.py  test_project_interface_pytest.py  test_runner.py  test_smoke.py
ui/: cli.py  cli_realtime.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+550 files in other folders)
