[project]
name = "simu-emperor"
version = "0.1.0"
description = "回合制皇帝模拟游戏 - AI Agent 扮演官员"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "aiofiles>=24.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "instructor>=1.5",
    "pyyaml>=6.0",
    "filelock>=3.0",
    "tiktoken>=0.7.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]

[project.scripts]
simu-emperor = "simu_emperor.main:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simu_emperor"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
