[project]
name = "simu-emperor"
version = "0.1.0"
description = "回合制皇帝模拟游戏 - AI Agent 扮演官员"
requires-python = ">=3.12"
dependencies = [
    "simu-shared",
    "simu-sdk",
    "simu-server",
    "simu-agents",
]

[project.scripts]
simu-emperor = "simu_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/shared/simu_shared", "packages/sdk/simu_sdk", "packages/server/simu_server", "packages/agents/simu_agents"]

[tool.uv.sources]
simu-shared = { workspace = true }
simu-sdk = { workspace = true }
simu-server = { workspace = true }
simu-agents = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
